--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ZaneMeroff.github.io/personal_portfolio",
+  "homepage": "http://ZaneMeroff.github.io/portfolio",
   "dependencies": {
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
