--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "homepage": "http://ZaneMeroff.github.io/portfolio",
   "dependencies": {
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "next",
+    "react-dom": "next",
     "react-scripts": "2.1.1"
   },
   "scripts": {
